# ceph-v3

./: .env.example  .gitignore  LICENSE  README.md  SOUL.md  ceph_model_routing.yaml  pyproject.toml
agent/: __main__.py  executor.py  identity.py  model_client.py  model_routing.py  planner.py  startup.py  tiered_llm.py
agent/constitutional/: fabrication_detector.py  guard.py  hard_limits.py  token_burn.py
agent/tools/: send_external.py  web_fetch.py
console/: app.js  index.html  styles.css
docs/: architecture.md  ceph-history.md  constitutional-framework.md  demo-scenario.md  model-001-ab-plan.md  model-001-cc2-log.md
infra/: README.md  deploy.ps1
observability/: arize_client.py
scripts/model_001_ab/: ab_runner.py  ab_tasks.json
tests/: test_config_parity.py  test_constitutional.py  test_identity.py  test_model_client.py  test_model_routing.py  test_regression_6_1.py  test_smoke.py  test_startup.py  test_tiered_llm.py
