[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceph-v3"
version = "0.1.0"
description = "Constitutional agent governance with Arize observability"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.33.0",
    "google-genai>=2.2.0",
    "arize-otel>=0.12.0",
    "mcp>=1.27.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
